--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <h1>APP DE NOTICIAS-REDACCIÓN</h1>
+    <h1>APP DE NOTICIAS-REDACCIÓN E INNOVACIÓN</h1>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
